fix(tech-icons): font-size 11vw on mobile

--- a/style.scss
+++ b/style.scss
@@ -433,7 +433,7 @@ main {
                     }
 
                     @media screen and (max-width: 400px) {
-                        font-size: 9vw;
+                        font-size: 11vw;
                     }
 
                     .tech-icon i {
